--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -9,6 +9,10 @@ author_profile: true
   <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
 {% endif %}
 
+{% if site.author.github %}
+  <div class="wordwrap">Most of the publications are also stored with code for reproducible manuscripts, analyses, and plots;
+on my <a href="https://github.com/{{site.author.github}}">GitHub page</a>, or the Body Pain Perception Lab <a href="https://github.com/Body-Pain-Perception-Lab">GitHub page</a>.</div>
+{% endif %}
 {% include base_path %}
 
 <!-- New style rendering if publication categories are defined -->
