--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -7,6 +7,15 @@ redirect_from:
   - /wordpress/blog-posts/
 ---
 
+
+I have two main types of blog posts:
+
+<ul>
+  <li>Example implmenetations of the bayesian workflow.</li>
+  <li>Hierarchical multivariate copula model building.</li>
+</ul>
+
+
 {% include base_path %}
 {% capture written_year %}'None'{% endcapture %}
 {% for post in site.posts %}
