--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -11,8 +11,8 @@ redirect_from:
 I have two main types of blog posts:
 
 <ul>
-  <li>Example implmenetations of the bayesian workflow.</li>
-  <li>Hierarchical multivariate copula model building.</li>
+  <li>Example implementations of a bayesian workflow.</li>
+  <li>implementations of Hierarchical multivariate copula models.</li>
 </ul>
 
 
