--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -10,7 +10,7 @@ author_profile: true
 {% endif %}
 <br>
 {% if site.author.github %}
-  <div class="wordwrap">Most of the publications are also stored on my <a href="https://github.com/{{site.author.github}}">GitHub page</a>, or the Body Pain Perception Lab <a href="https://github.com/Body-Pain-Perception-Lab">GitHub page</a>.</div> 
+  <div class="wordwrap">Most of the publications are also stored on the Body Pain Perception Lab <a href="https://github.com/Body-Pain-Perception-Lab">GitHub page</a>.</div> 
   <br>
   In these repositories you will find reproducible manuscripts, analyses, and plots.
 
