--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "Talks & Tutorials"
+title: "Talks, Tutorials & Teaching"
 permalink: /talks/
 author_profile: true
 ---
