--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -8,21 +8,103 @@ redirect_from:
 ---
 
 
-I have two main types of blog posts:
-
-<ul>
-  <li>Example implementations of a bayesian workflow.</li>
-  <li>implementations of Hierarchical multivariate copula models.</li>
-</ul>
-
-
 {% include base_path %}
-{% capture written_year %}'None'{% endcapture %}
-{% for post in site.posts %}
-  {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
-  {% if year != written_year %}
-    <h2 id="{{ year | slugify }}" class="archive__subtitle">{{ year }}</h2>
-    {% capture written_year %}{{ year }}{% endcapture %}
-  {% endif %}
-  {% include archive-single.html %}
-{% endfor %}
+
+<style>
+.category-section {
+  margin: 2em 0;
+}
+
+.category-header {
+  font-size: 1.1em;
+  font-weight: 400;
+  margin: 1.5em 0 0.5em 0;
+  padding: 0.5em 0;
+  border-bottom: 1px solid #d4d4d4;
+  cursor: pointer;
+  user-select: none;
+}
+
+.category-header:hover {
+  color: #52adc8;
+}
+
+.category-number {
+  color: #888;
+  font-weight: 300;
+  margin-left: 0.5em;
+}
+
+.category-content {
+  display: none;
+  margin-left: 1.5em;
+  margin-top: 1em;
+  counter-reset: post-counter;
+}
+
+.category-content.active {
+  display: block;
+}
+
+.category-content .archive__item {
+  counter-increment: post-counter;
+}
+
+.category-content .archive__item-title::before {
+  content: counter(post-counter) ". ";
+  color: #999;
+  font-weight: 400;
+}
+
+.toggle-icon {
+  font-size: 0.8em;
+  margin-right: 0.5em;
+  display: inline-block;
+  transition: transform 0.2s;
+}
+
+.toggle-icon.rotated {
+  transform: rotate(90deg);
+}
+
+.post-number {
+  color: #999;
+  font-size: 0.9em;
+  margin-right: 0.5em;
+}
+</style>
+
+<script>
+function toggleCategory(categoryId) {
+  var content = document.getElementById(categoryId);
+  var icon = document.getElementById(categoryId + '-icon');
+  content.classList.toggle('active');
+  icon.classList.toggle('rotated');
+}
+</script>
+
+<div class="category-section">
+  <div class="category-header" onclick="toggleCategory('starting-off')">
+    <span class="toggle-icon" id="starting-off-icon">▸</span>
+    Starting Off: Bayesian Workflow
+  </div>
+  <div class="category-content" id="starting-off">
+    {% assign starting_posts = site.posts | where_exp: "post", "post.categories contains 'Starting Off'" | reverse %}
+    {% for post in starting_posts %}
+      {% include archive-single.html %}
+    {% endfor %}
+  </div>
+</div>
+
+<div class="category-section">
+  <div class="category-header" onclick="toggleCategory('copula-modeling')">
+    <span class="toggle-icon" id="copula-modeling-icon">▸</span>
+    Multivariate Copula Modeling
+  </div>
+  <div class="category-content" id="copula-modeling">
+    {% assign copula_posts = site.posts | where_exp: "post", "post.categories contains 'Multivariate Copula Modeling'" | reverse %}
+    {% for post in copula_posts %}
+      {% include archive-single.html %}
+    {% endfor %}
+  </div>
+</div>
